# Study-California-House-Prices

./: .gitignore  pyproject.toml  readme.md
dev/: poetry.md
models/: lgbm.joblib
notebooks/: part01_preprocessing.ipynb  part03_model.ipynb
